# polariz

./: Cargo.toml  README.md
src/: bar.rs  box_plot.rs  bubble.rs  candlestick.rs  colors.rs  fill_between.rs  funnel.rs  heatmap.rs  hexbin.rs  hexbin.wgsl  histogram.rs  line.rs  line.wgsl  main.rs  message.rs  parallel.rs  parallel.wgsl  pie.rs  pie.wgsl  plot.rs  plot_core.rs  radar.rs  radial_dial.rs  scatter.rs  scatter.wgsl  stacked_area.rs  stacked_area.wgsl  stacked_bar.rs  stacked_bar.wgsl  state.rs  violin.rs  violin.wgsl
src/plot/: colors.rs  common.rs  core.rs  mod.rs
src/plot/kernels/: bar.rs  boxplot.rs  bubble.rs  candlestick.rs  fill_between.rs  funnel.rs  heatmap.rs  hexbin.rs  histogram.rs  line.rs  mod.rs  parallel.rs  pie.rs  radar.rs  radial_dial.rs  scatter.rs  stacked_area.rs  stacked_bar.rs  violin.rs
