[package]
name = "polariz"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
iced = { version = "0.14.0", features = ["advanced", "canvas", "image", "wgpu"] }
image = "0.25.10"
polars = { version = "0.53.0", features = ["abs", "lazy", "round_series"] }
rand = "0.10.0"
rand_distr = "0.6.0"
wgpu = "28.0.0"
